force-app/main/default/objects/Opportunity/fields/Alcohol__c.field-meta.xml
<CustomField>
    <fullName>Alcohol__c</fullName>
    <label>Alcohol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>never</fullName>
                <default>true</default>
                <label>never</label>
            </value>
            <value>
                <fullName>1 or 2 a month</fullName>
            </value>
            <value>
                <fullName>between 2 and 4 a month</fullName>
            </value>
            <value>
                <fullName>between 2 and 4 a week</fullName>
            </value>
            <value>
                <fullName>4 or more a week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>