force-app/main/default/objects/Opportunity/fields/Excercise__c.field-meta.xml
<CustomField>
    <fullName>Excercise__c</fullName>
    <label>Excercise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>never</fullName>
            </value>
            <value>
                <fullName>1 a week</fullName>
            </value>
            <value>
                <fullName>2 a week</fullName>
            </value>
            <value>
                <fullName>3 a week</fullName>
            </value>
            <value>
                <fullName>4 a week</fullName>
            </value>
            <value>
                <fullName>5 a week</fullName>
            </value>
            <value>
                <fullName>6 a week</fullName>
            </value>
            <value>
                <fullName>7 a week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>