force-app/main/default/objects/Opportunity/fields/Excercise_plan__c.field-meta.xml
<CustomField>
    <fullName>Excercise_plan__c</fullName>
    <inlineHelpText>Here is the patient&apos;s excercise plan</inlineHelpText>
    <label>Excercise plan</label>
    <type>TextArea</type>
</CustomField>