force-app/main/default/objects/Opportunity/fields/Food_plan__c.field-meta.xml
<CustomField>
    <fullName>Food_plan__c</fullName>
    <inlineHelpText>Here is the actual food plan of the patient</inlineHelpText>
    <label>Food plan</label>
    <type>TextArea</type>
</CustomField>