force-app/main/default/objects/Opportunity/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>Patient&apos;s actual height</inlineHelpText>
    <label>Height</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>