force-app/main/default/objects/Opportunity/fields/Illness__c.field-meta.xml
<CustomField>
    <fullName>Illness__c</fullName>
    <inlineHelpText>Insert patient&apos;s illness</inlineHelpText>
    <label>Illness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>