force-app/main/default/objects/Opportunity/fields/IMC__c.field-meta.xml
<CustomField>
    <fullName>IMC__c</fullName>
    <formula>( Weigh__c ) / ( Height__c ^ 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Below 18.5   --&gt; Low weight
18.5 - 24.9  --&gt; Normal
25.0 -29.9   --&gt; Excess weight
30.0 or more --&gt;  Obesity</inlineHelpText>
    <label>IMC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>