force-app/main/default/objects/Opportunity/fields/Pregnat__c.field-meta.xml
<CustomField>
    <fullName>Pregnat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pregnat</label>
    <type>Checkbox</type>
</CustomField>