force-app/main/default/objects/Opportunity/fields/Smoke__c.field-meta.xml
<CustomField>
    <fullName>Smoke__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smoke</label>
    <type>Checkbox</type>
</CustomField>