force-app/main/default/objects/Opportunity/fields/Weigh__c.field-meta.xml
<CustomField>
    <fullName>Weigh__c</fullName>
    <inlineHelpText>Insert the actual weigh</inlineHelpText>
    <label>Weigh</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>